# smarthome_prototype

./: Cargo.toml
examples/: api_client.rs  api_server.rs  async_tcp_server_example.rs  atcp_client_example.rs  audp_client_example.rs  audp_server_example.rs  example.rs  overview.rs  serde_example.rs  server.rs  tcp_client.rs  tcp_device_server.rs  tcp_server.rs  udp_client.rs  udp_client_example.rs  udp_server.rs  udp_server_example.rs
examples/prev/: async_udp_server_example.rs  example.rs  nested_folders_info.txt  udp_client.rs
src/: db.rs  devices.rs  errors.rs  info.rs  lib.rs  main.rs  models.rs  paths.rs  remote.rs  server.rs  smarthouse.rs  tokio_clients.rs  tokio_servers.rs
tests/: integrations.rs
