[package]
name = "smarthome_4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# diesel = { version = "2.0.0-rc.0", features = ["postgres"] }
# dotenvy = "0.15"
# libsqlite3-sys = { version = "*", features = [ "bundled" ] }
